// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LocationItem > should correspond default layout 1`] = `
<div>
  <div
    class="_locationsListItem_a3311b"
    data-test-id="location-list-item"
  >
    <button
      class="_locationsButton_a3311b _locationsButtonActive_a3311b"
    >
      Москва и МО
    </button>
  </div>
</div>
`;

exports[`LocationItem > should support the "currentLocationId" prop 1`] = `
<div>
  <div
    class="_locationsListItem_a3311b"
    data-test-id="location-list-item"
  >
    <button
      class="_locationsButton_a3311b _locationsButtonActive_a3311b"
    >
      Москва и МО
    </button>
  </div>
</div>
`;

exports[`LocationItem > should support the "currentLocationId" prop 2`] = `
<div>
  <div
    class="_locationsListItem_a3311b"
    data-test-id="location-list-item"
  >
    <button
      class="_locationsButton_a3311b"
    >
      Москва и МО
    </button>
  </div>
</div>
`;

exports[`LocationItem > should support the "locationItem" prop 1`] = `
<div>
  <div
    class="_locationsListItem_a3311b"
    data-test-id="location-list-item"
  >
    <button
      class="_locationsButton_a3311b _locationsButtonActive_a3311b"
    >
      Москва и МО
    </button>
  </div>
</div>
`;

exports[`LocationItem > should support the "locationItem" prop 2`] = `
<div>
  <div
    class="_locationsListItem_a3311b"
    data-test-id="location-list-item"
  >
    <button
      class="_locationsButton_a3311b"
    >
      Астрахань
    </button>
  </div>
</div>
`;
